hphp/test/zend/good/zend/jump09.php
<?php
switch (0) {
	case 1:
		L1: echo "bug\n";
		break;
}
goto L1;
?>