hphp/test/zend/bad/tests-basic/bug51709_2.php
<?php

class foo {
        static function goto() {
                echo "1";
        }
}

?>
===DONE===
<?php exit(0); ?>